rework layout, fix alignment issues

--- a/src/app.css
+++ b/src/app.css
@@ -31,6 +31,7 @@ body {
 		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	line-height: 1.6;
 	padding-bottom: 2rem;
+	padding-inline: 0.75rem;
 }
 
 a {
